Making progress on the header

--- a/Interviews/Mattermost/Development/src/styles/header.sass
+++ b/Interviews/Mattermost/Development/src/styles/header.sass
@@ -1,8 +1,21 @@
 
 .header
+  display: flex
+  justify-content: center
+  align-items: center
+  padding-bottom: 15%
   position: relative
   min-height: 900px
   min-height: 100vh
+
+.ctrIntro
+  position: relative
+  z-index: 5
+  max-width: 590px
+  text-align: center
+
+  h1, p
+    color: hsla(0,0%,100%,0.02)
 
 .headerBg
   position: absolute
