--- a/Interviews/Mattermost/Development/src/styles/main.sass
+++ b/Interviews/Mattermost/Development/src/styles/main.sass
@@ -1,7 +1,10 @@
 
 .main
+  position: relative
+  z-index: 2
   max-width: 740px
-  margin: 0 auto
+  margin: -28rem auto // Fallback
+  margin: -26vh auto
   padding: 20px
 
 
