--- a/Interviews/Mattermost/Development/src/styles/global.sass
+++ b/Interviews/Mattermost/Development/src/styles/global.sass
@@ -7,6 +7,7 @@ $primary: hsla(216, 97%, 60%, 1)
 $offWhite:   hsla(214, 100%, 98%, 1)
 $border: hsla(225, 37%, 82%, 1)
 $dark:  hsla(223, 22%, 41%, 1)
+$dark:  hsla(223, 22%, 41%, .05)
 $g1: #1ba4f7
 $g2: #4641ff
 
@@ -88,15 +89,12 @@ h1
 h2
   font-size: 3.2rem
   line-height: 3.6rem
-
 p, span, li
   font-size: 1.8rem
   line-height: 3rem
-
-// .p1
-//   margin-bottom: 1rem
-//   font-size: 3.2rem
-//   line-height: 3.6rem
+.p1
+  font-size: 2rem
+  line-height: 3.2rem
 // .p2
 //   font-size: 1.8rem
 //   line-height: 2.4rem
@@ -114,14 +112,12 @@ button
   h2
     font-size: 2.8rem
     line-height: 3.2rem
-
   p, span, li
     font-size: 1.6rem
     line-height: 2.8rem
-
-  // .p1
-  //   font-size: 2.8rem
-  //   line-height: 3.2rem
+  .p1
+    font-size: 1.8rem
+    line-height: 3rem
   // .p2
   //   font-size: 1.6rem
   //   line-height: 2.1rem
@@ -171,6 +167,7 @@ button
 
 .card
   margin-bottom: 1.6rem
+  padding: 5rem 4rem
   background-color: white
   border-radius: 1rem
   box-shadow: $shadowCard
