--- a/Interviews/Mattermost/Development/src/styles/header.sass
+++ b/Interviews/Mattermost/Development/src/styles/header.sass
@@ -15,7 +15,13 @@
   text-align: center
 
   h1, p
-    color: hsla(0,0%,100%,0.02)
+    color: white
+    // color: hsla(0,0%,100%,0.02)
+
+  h1
+    text-shadow: $shadowHeaderText
+    &:last-of-type
+      margin-bottom: 4rem
 
 .headerBg
   position: absolute
