--- a/Interviews/Mattermost/Development/src/styles/main.sass
+++ b/Interviews/Mattermost/Development/src/styles/main.sass
@@ -9,6 +9,42 @@
 
 
 
+.sectionBio
+
+  .card
+    padding-left: 16rem
+
+    .avatar
+      position: absolute
+      top: 5rem
+      left: 3.4rem
+      width: 9.2rem
+      height: 9.2rem
+      border-radius: 9rem
+      background-color: $border
+      background-image: url('../images/avatar.jpg')
+      background-size: 105%
+      background-position: center
+
+.sectionWorkWithMe
+  display: flex
+  flex-direction: column
+  align-items: center
+
+  .quoteCard
+    max-width: 640px
+    padding: 3rem 4rem 3rem 9.4rem
+
+  .iconQuote
+    position: absolute
+    top: 2.6rem
+    left: -2.2rem
+    border-radius: 9rem
+    box-shadow: 3px 0 6px hsla(226, 85%, 27%, 0.15)
+
+  .quoteText
+    color: $primary
+    font-weight: 700
 
 // .sectionWork
 
