Nearly finished with Main

--- a/Interviews/Mattermost/Development/src/styles/global.sass
+++ b/Interviews/Mattermost/Development/src/styles/global.sass
@@ -48,6 +48,15 @@ body
 section
   margin-bottom: 10rem
 
+ul
+  list-style: none
+  margin: 0
+  padding: 0
+
+ol
+  margin: 0
+  padding-left: 2rem
+
 // a
 //   display: block
 //   text-decoration: none
@@ -73,7 +82,7 @@ p, span, li, button
   font-family: 'Montserrat', Helvetica Neue, arial, sans-serif
 
 .marBot2
-  margin-bottom: 2rem
+  margin-bottom: 1.8rem
 .marBot4
   margin-bottom: 4rem
 
