--- a/Interviews/Mattermost/Development/src/styles/main.sass
+++ b/Interviews/Mattermost/Development/src/styles/main.sass
@@ -26,6 +26,8 @@
       background-size: 105%
       background-position: center
 
+
+
 .sectionWorkWithMe
   display: flex
   flex-direction: column
@@ -46,7 +48,30 @@
     color: $primary
     font-weight: 700
 
-// .sectionWork
+
+
+.sectionTools
+
+  .line
+    display: flex
+    border-bottom: 1px solid $border
+
+    &:last-of-type
+      border-bottom: none
+
+  p
+    flex: 1
+    margin: 1.2rem 0 1.2rem 1.5rem
+
+
+.sectionExperience
+
+  .line
+    border-bottom: 1px solid $border
+    padding: 1.2rem 0 1.2rem 1.5rem
+
+    &:last-of-type
+      border-bottom: none
 
 //   .card
 //     display: flex
