Finished the footer

--- a/Interviews/Mattermost/Development/src/styles/global.sass
+++ b/Interviews/Mattermost/Development/src/styles/global.sass
@@ -57,10 +57,11 @@ ol
   margin: 0
   padding-left: 2rem
 
-// a
-//   display: block
-//   text-decoration: none
-//   cursor: pointer
+a
+  // display: block
+  // text-decoration: none
+  color: $primary
+  cursor: pointer
 
 
 
