--- a/Interviews/Mattermost/Development/src/styles/main.sass
+++ b/Interviews/Mattermost/Development/src/styles/main.sass
@@ -4,7 +4,7 @@
   z-index: 2
   max-width: 740px
   margin: -28rem auto // Fallback
-  margin: -26vh auto
+  margin: -27vh auto
   padding: 20px
 
 
@@ -73,87 +73,10 @@
     &:last-of-type
       border-bottom: none
 
-//   .card
-//     display: flex
+.sectionWhatNext
 
-//   .jestCard
-//     padding: 3rem
+  li
+    margin-bottom: 1rem
 
-//     .jestLogo
-//       margin-right: 3rem
-//       min-width: 72px
-
-//   .imgCard
-//     min-height: 326px
-    
-//     .ctrLeft
-//       flex: 3
-//       display: flex
-//       flex-direction: column
-//       padding: 3rem
-//       min-width: 336px
-
-//       button
-//         margin-top: auto
-
-//     .ctrRight
-//       flex: 4
-//       border-radius: 0 10px 10px 0
-//       background-position: center
-//       background-size: cover
-
-//     @media (max-width: 740px)
-//       .ctrRight
-//         display: none
-
-//     .imgWebGL
-//       background-image: url(../images/imgWebGL.gif)
-//     .sketchbook
-//       background-image: url(../images/sketchbook.jpg)
-
-
-
-// .sectionReconsider
-
-//   .card
-//     padding: 3rem
-
-//     .superQuote
-//       color: $primary
-//       font-weight: 700
-
-
-
-// .whatNext
-//   margin-bottom: 8rem
-
-//   .card
-//     display: flex
-//     min-height: 166px
-
-//     &:hover
-//       svg
-//         fill: $primary
-
-//     svg
-//       width: 48px
-//       height: 48px
-//       transition: 0.2s $zease
-
-//     .iconPhone, .iconPersonalSite
-//       width: 44px
-//       height: 44px
-
-//     .ctrLeft
-//       display: flex
-//       align-items: center
-//       justify-content: center
-//       width: 110px
-//       min-width: 110px
-
-//     .ctrRight
-//       padding: 3rem
-
-
-
-  
+    &:last-of-type
+      margin-bottom: 0
