--- a/Interviews/Mattermost/Development/src/styles/footer.sass
+++ b/Interviews/Mattermost/Development/src/styles/footer.sass
@@ -1,75 +1,36 @@
 
 
-// .footer
-//   position: absolute
-//   bottom: 0
-//   left: 0
-//   right: 0
-//   z-index: -1
+.footer
+  position: absolute
+  bottom: 0
+  left: 0
+  right: 0
+  z-index: -1
+  height: 38rem
+  padding-top: 1rem
+  overflow: hidden
 
-//   .ctrTop
-//     position: relative
-//     height: 520px
-  
-//   .starsWrapTop
-//     position: relative
-//     margin: 0 auto
-//     padding: 30px
-//     max-width: 1330px
-//     height: 100%
+.footerBg
+  position: relative
+  bottom: -15%
+  height: 200%
+  transform: skew(0deg, -5deg)
+  background-image: linear-gradient(-135deg, #1ba4f7 0%, #4641ff 100%)
 
-//     .top1
-//       bottom: 236px
-//     .top2
-//       bottom: 100px
-//       left: 17%
-//     .top3
-//       top: 30px
-//       right: 4%
+  &::before
+    background: url('../images/introBgTop.svg') no-repeat
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 300px
 
-//   .starSVG
-//     position: absolute
-
-//     svg
-//       fill-opacity: 0
-//       stroke-opacity: 0
-//       animation: twinkle 1s ease-in-out alternate infinite
-
-//   .starSm
-//     width: 60px
-//     height: 60px
-//     stroke-width: 1.8px
-//   .starLg
-//     width: 120px
-//     height: 120px
-
-
-
-//   .ctrBottom
-//     position: relative
-//     height: 430px
-//     background-color: $primary
-
-//   .starsWrapBottom
-//     position: relative
-//     margin: 0 auto
-//     padding: 30px
-//     max-width: 1460px
-//     height: 100%
-
-//     .bottom1
-//       left: 10%
-//       bottom: 150px
-//     .bottom2
-//       right: 30%
-//       bottom: 20px
-//     .bottom3
-//       right: 40px
-//       top: 40px
-
-// @keyframes twinkle
-//   0%
-//     stroke-opacity: 0
-//   100%
-//     stroke-opacity: 1
-  
+  &::after
+    background: url('../images/introBgBottom.svg') no-repeat
+    content: ''
+    position: absolute
+    bottom: 15rem
+    right: 0
+    width: 600px
+    height: 300px
