--- a/Interviews/Mattermost/Development/src/styles/header.sass
+++ b/Interviews/Mattermost/Development/src/styles/header.sass
@@ -16,7 +16,7 @@
 
   h1, p
     color: white
-    color: hsla(0,0%,100%,0.02)
+    // color: hsla(0,0%,100%,0.02)
 
   h1
     text-shadow: $shadowHeaderText
