--- a/Interviews/Mattermost/Development/src/styles/main.sass
+++ b/Interviews/Mattermost/Development/src/styles/main.sass
@@ -29,9 +29,16 @@
 
 
 .sectionWorkWithMe
+  position: relative
   display: flex
   flex-direction: column
   align-items: center
+
+  img
+    position: absolute
+    top: -4.2rem
+    right: -8.7rem
+
 
   .quoteCard
     max-width: 640px
@@ -51,6 +58,12 @@
 
 
 .sectionTools
+  position: relative
+
+  img
+    position: absolute
+    top: 8.7rem
+    right: -5.6rem
 
   .line
     display: flex
@@ -65,6 +78,12 @@
 
 
 .sectionExperience
+  position: relative
+
+  img
+    position: absolute
+    top: -4.2rem
+    left: -8.7rem
 
   .line
     border-bottom: 1px solid $border
