Solved a mobile issue in the header

--- a/Interviews/Mattermost/Development/src/styles/header.sass
+++ b/Interviews/Mattermost/Development/src/styles/header.sass
@@ -11,7 +11,8 @@
 .ctrIntro
   position: relative
   z-index: 5
-  max-width: 590px
+  max-width: 630px
+  padding: 0 2rem
   text-align: center
 
   h1, p
