Solved some mobile issues

--- a/Interviews/Mattermost/Development/src/styles/global.sass
+++ b/Interviews/Mattermost/Development/src/styles/global.sass
@@ -173,6 +173,9 @@ button
 
 
 
+@media screen and (max-width: 740px)
+  .accentSquare
+    display: none
 
 @media screen and (max-width: 500px)
   .main
