--- a/Interviews/Mattermost/Development/src/styles/header.sass
+++ b/Interviews/Mattermost/Development/src/styles/header.sass
@@ -51,3 +51,15 @@
     right: 0
     width: 600px
     height: 300px
+
+
+@media screen and (max-width: 500px)
+  .header
+    min-height: 110vh
+
+  .ctrIntro
+    padding: 0 1rem
+
+    h1
+      &:last-of-type
+        margin-bottom: 3rem
