Dynamic image loading is working!

--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -1,5 +1,6 @@
 
 
+  
 // *****
 // Styles relevant to the workings of the grid
 // *****
@@ -26,5 +27,5 @@
     border-bottom: 1px solid #eee
     overflow: hidden
 
-  figcaption
+  .birdName
     padding: 2rem
