--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -29,3 +29,20 @@
 
   .birdName
     padding: 2rem
+
+.bgModal
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  display: flex
+  align-items: center
+  justify-content: center
+  background-color: hsla(0, 0%, 0%, 0.9)
+
+  .ctrVideo
+    width: 800px
+    height: 480px
+    background-color: gray
+    border-radius: 10px
