--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -19,16 +19,18 @@
   @media (max-width: 600px)
     width: calc(100% - 30px)
 
-
   .cardImg
-    width: 100%
-    height: 160px
+    min-width: 100%
+    height: 200px
     border-radius: 1rem 1rem 0 0
-    border-bottom: 1px solid #eee
+    border-bottom: 1px solid $border
     overflow: hidden
 
   .birdName
     padding: 2rem
+    text-align: center
+
+  
 
 .modal
   position: fixed
