Implemented a working search feature

--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -1,6 +1,10 @@
 
 
-  
+.searchInput
+  position: fixed
+  top: 30px
+  left: 30px
+
 // *****
 // Styles relevant to the workings of the grid
 // *****
