--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -1,13 +1,22 @@
 
 
 .searchInput
-  position: fixed
-  top: 30px
-  left: 30px
-
-// *****
-// Styles relevant to the workings of the grid
-// *****
+  // position: fixed
+  // top: 30px
+  // left: 30px
+  // z-index: 5
+  display: block
+  margin: 0 auto 3rem
+  padding: 1rem 2rem
+  width: 100%
+  max-width: 54rem
+  background-color: hsla(0,0%,100%, .94)
+  border-radius: 10rem
+  border: 1px solid $border
+  border: none
+  box-shadow: inset 1px 2px 4px hsla(0,0%,0%,0.26)
+  color: $dark
+  outline: none
 
 .grid
   display: flex
@@ -17,6 +26,18 @@
 .card
   width: calc(33.33% - 30px)
   margin: 15px
+  // Above deals with the grid ↑
+  position: relative
+  cursor: pointer
+  margin-bottom: 1.6rem
+  background-color: hsla(0, 0%, 100%, 1)
+  border-radius: 1rem
+  // border: 1px solid $border
+  box-shadow: $shadowCard
+  transition: all 0.2s $zease
+
+  &:hover
+    transform: translateY(2px)
 
   @media (max-width: 1000px)
     width: calc(50% - 30px)
@@ -24,14 +45,14 @@
     width: calc(100% - 30px)
 
   .cardImg
-    min-width: 100%
+    margin: .6rem .6rem 0
     height: 200px
-    border-radius: 1rem 1rem 0 0
+    border-radius: .6rem
     border-bottom: 1px solid $border
     overflow: hidden
 
   .birdName
-    padding: 2rem
+    padding: 1rem
     text-align: center
 
   
