--- a/Experiments/199 Birds/199-birds/src/styles/global.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/global.sass
@@ -6,6 +6,7 @@
 $primary: hsla(216, 97%, 60%, 1)
 $offWhite: hsl(42, 100%, 95%)
 $border: hsla(180, 13%, 30%, .2)
+$green: #c8da81
 $dark:  hsl(180, 13%, 28%)
 $g1: #1ba4f7
 $g2: #4641ff
@@ -43,6 +44,7 @@ body
   margin: 0
   padding: 0
   background-color: $offWhite
+  // background-color: $green
   overflow-x: hidden
 
 section
@@ -73,7 +75,7 @@ a
 // Typography
 // **********
 
-h1, h2, h3, h4, h5, h6, p, span, li, button
+h1, h2, h3, h4, h5, h6, p, span, li, button, input
   margin: 0
   color: $dark
   -webkit-font-smoothing: antialiased
