--- a/Experiments/199 Birds/199-birds/src/styles/header.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/header.sass
@@ -1,8 +1,11 @@
 
 .header
-  padding: 6rem
 
-  .titleText
+  .heroText
+    padding: 1rem 1rem 6rem
+
+  .heroText h1,
+  .heroText h2
     color: hsla(0, 87%, 63%, 1)
     font-family: Merriweather
     font-weight: 900
@@ -15,3 +18,47 @@
   h2
     font-size: 6rem
     line-height: 7rem
+
+
+
+
+
+.searchBar
+  position: sticky
+  top: 0
+  z-index: 10
+  padding: 1rem 2rem
+  margin-bottom: 2rem
+  transition: 0.08s ease-in-out
+
+
+.searchInput
+  // position: fixed
+  // top: 30px
+  // left: 30px
+  // z-index: 5
+  display: block
+  margin: 0 auto
+  padding: 1rem 2rem
+  width: 100%
+  max-width: 54rem
+  background-color: white
+  border-radius: 10rem
+  border: 1px solid hsla(180, 20%, 64%, .50)
+  // border: none
+  outline: none
+
+  &::placeholder
+    color: hsla(180, 13%, 30%, .5)
+
+@media screen and (max-width: 500px)
+  .searchBar
+    padding: .8rem 1rem
+  .searchInput
+    padding: .5rem 1.5rem
+
+
+
+
+  
+
