--- a/Experiments/199 Birds/199-birds/src/styles/header.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/header.sass
@@ -6,7 +6,7 @@
 
   .heroText h1,
   .heroText h2
-    color: hsla(0, 87%, 63%, 1)
+    color: hsl(25, 100%, 67%)
     font-family: Merriweather
     font-weight: 900
     text-align: center
@@ -29,6 +29,8 @@
   z-index: 10
   padding: 1rem 2rem
   margin-bottom: 2rem
+  background-color: hsla(72, 55%, 68%, 0)
+  box-shadow: 0px 10px 60px hsla(146, 85%, 27%, 0)
   transition: 0.08s ease-in-out
 
 
@@ -50,6 +52,10 @@
 
   &::placeholder
     color: hsla(180, 13%, 30%, .5)
+
+.barActive
+  background-color: hsla(72, 55%, 68%, .94)
+  box-shadow: 0px 10px 60px hsla(146, 85%, 27%, 0.25)
 
 @media screen and (max-width: 500px)
   .searchBar
