Added a "no matches" condition for the search

--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -1,6 +1,5 @@
 .main
   position: relative
-  min-height: 100vh
 
 .imgLeaves
   display: block
@@ -15,7 +14,7 @@ section
 
 
 
-  
+
 .grid
   position: relative
   display: flex
@@ -52,11 +51,20 @@ section
     border-bottom: 1px solid $border
     overflow: hidden
 
+    .gatsby-image-wrapper
+      top: -2rem
+
   .birdName
     padding: 1rem
     text-align: center
 
 
+
+
+
+.noMatchMessage
+  margin: 8rem 1rem
+  text-align: center
 
 
 
