--- a/Experiments/199 Birds/199-birds/src/styles/header.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/header.sass
@@ -1,23 +1,15 @@
 
-.header
-
-  .heroText
-    padding: 4rem 1rem 6rem
-
-  .heroText h1,
-  .heroText h2
-    color: hsl(22, 100%, 65%)
-    font-family: Merriweather
-    font-weight: 900
-    text-align: center
+.heroText
+  padding: 4rem 1rem 6rem
 
   h1
+    color: hsl(22, 100%, 65%)
+    font-family: Merriweather, serif
+    font-weight: 900
     font-size: 11rem
     line-height: 13rem
-  
-  h2
-    font-size: 6rem
-    line-height: 7rem
+    text-align: center
+    
 
 
 
@@ -33,12 +25,7 @@
   box-shadow: 0px 10px 60px hsla(146, 85%, 27%, 0)
   transition: 0.08s ease-in-out
 
-
 .searchInput
-  // position: fixed
-  // top: 30px
-  // left: 30px
-  // z-index: 5
   display: block
   margin: 0 auto
   padding: 1rem 2rem
@@ -46,16 +33,15 @@
   max-width: 54rem
   background-color: white
   border-radius: 10rem
-  border: 1px solid hsla(180, 20%, 64%, .50)
-  // border: none
+  border: none
+  box-shadow: 0px 8px 30px hsla(30, 16%, 27%, 0.20)
   outline: none
 
   &::placeholder
-    color: hsla(180, 13%, 30%, .5)
+    color: hsla(30, 13%, 30%, .5)
 
 .barActive
-  background-color: hsla(72, 55%, 68%, .94)
-  box-shadow: 0px 10px 60px hsla(146, 85%, 27%, 0.25)
+  background-color: $offWhite
 
 @media screen and (max-width: 500px)
   .searchBar
