Improved accessibility, added metadata, favicon, etc.

--- a/Experiments/199 Birds/199-birds/src/styles/header.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/header.sass
@@ -13,8 +13,6 @@
 
 
 
-
-
 .searchBar
   position: sticky
   top: 0
@@ -41,7 +39,7 @@
     color: hsla(30, 13%, 30%, .5)
 
 .barActive
-  background-color: $offWhite
+  background-color: transparentize($offWhite, 0.04)
 
 @media screen and (max-width: 500px)
   .searchBar
