--- a/Experiments/199 Birds/199-birds/src/styles/header.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/header.sass
@@ -1,4 +1,27 @@
 
+.imgLeaves
+  display: block
+  width: 100%
+  position: relative
+
+.imgLeavesTop
+  position: absolute
+  z-index: -1
+  top: -5rem
+  transform: rotate(180deg)
+
+  svg
+    fill: hsl(42, 80%, 90%)
+  
+.imgLeavesBottom
+  bottom: -5px
+
+  svg
+    fill: $green
+
+
+
+
 .heroText
   padding: 4rem 1rem 6rem
 
@@ -16,12 +39,21 @@
 .searchBar
   position: sticky
   top: 0
+  left: 0
+  right: 0
   z-index: 10
-  padding: 1rem 2rem
-  margin-bottom: 2rem
-  background-color: hsla(72, 55%, 68%, 0)
-  box-shadow: 0px 10px 60px hsla(146, 85%, 27%, 0)
-  transition: 0.08s ease-in-out
+  padding: 1rem
+
+.searchBG
+  position: absolute
+  z-index: -1
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  background-color: transparentize($offWhite, 0.04)
+  transition: opacity 0.3s $zease
+  opacity: 0
 
 .searchInput
   display: block
@@ -38,10 +70,18 @@
   &::placeholder
     color: hsla(30, 13%, 30%, .5)
 
-.barActive
-  background-color: transparentize($offWhite, 0.04)
+.barActive .searchBG
+  opacity: 1
 
-@media screen and (max-width: 500px)
+
+  
+
+// Media Queries ↓
+@media (max-width: 600px)
+  .heroText h1
+    font-size: 8.6rem
+    line-height: 10rem
+
   .searchBar
     padding: .8rem 1rem
   .searchInput
