--- a/Experiments/199 Birds/199-birds/src/styles/global.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/global.sass
@@ -17,7 +17,7 @@ $gradient: linear-gradient(-135deg, $g1 0%, $g2 100%)
 
 
 // Shadows
-$shadowCard: 0px 10px 60px hsla(226, 85%, 27%, 0.15)
+$shadowCard: 0px 8px 26px -6px hsla(126, 85%, 27%, 0.35)
 $shadowHeaderText: 0px 3px 6px hsla(235, 100%, 31%, 0.3)
 
 
