--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -53,6 +53,13 @@ section
 
 
 
+footer
+  width: 100%
+  height: 8rem
+  background-color: $green
+
+
+
 // Media Queries ↓
 @media (max-width: 1000px)
   .grid
@@ -74,6 +81,9 @@ section
   .card
     width: calc(100% - 20px)
     margin: 15px 10px
+
+    &:hover
+      transform: scale(0.97)
 
     .cardImg
       height: 288px
