--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -1,3 +1,9 @@
+
+.pageWrap
+  display: flex
+  flex-direction: column
+  min-height: 100vh
+  
 main
   position: relative
 
@@ -5,7 +11,6 @@ section
   display: flex
   flex-direction: column
   align-items: center
-  // background-image: linear-gradient(to bottom, $green 0%, $offWhite 100%)
   background-color: $green
 
 .grid
@@ -54,8 +59,9 @@ section
 
 
 footer
+  flex: 1
   width: 100%
-  height: 8rem
+  min-height: 8rem
   background-color: $green
 
 
