Minor tweaks to visuals

--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -34,13 +34,13 @@ section
   transition: transform 0.5s $zease
 
   &:hover
-    transform: scale(1.05)
+    transform: scale(1.03)
 
   .cardImg
     margin: .6rem .6rem 0
     width: calc(100% - 1.2rem)
     border-radius: .6rem
-    background-color: $border
+    background-color: #eee
     overflow: hidden
 
   .birdName
