--- a/Experiments/Wikipedia Trivia Generator/style.css
+++ b/Experiments/Wikipedia Trivia Generator/style.css
@@ -33,6 +33,18 @@ li {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#results {
+  max-width: 80rem;
+  margin-bottom: 7rem;
+  padding: 6rem 3rem 3rem;
+}
+
+li {
+  list-style-type: none;
+  text-align: center;
+  margin-bottom: 2.8rem;
+}
+
 h1 {
   color: hsla(223, 22%, 21%, 0.7);
   font-size: 2.6rem;
@@ -40,7 +52,8 @@ h1 {
 
 .form {
   width: 100%;
-  max-width: 400px;
+  max-width: 40rem;
+  margin-bottom: 6rem;
 }
 
 fieldset {
@@ -64,7 +77,7 @@ button {
   background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
   background-size: 200% auto;
   border: none;
-  border-radius: 100px;
+  border-radius: 10rem;
   color: white;
   cursor: pointer;
   font-weight: bold;
@@ -77,16 +90,4 @@ button:focus,
 button:hover {
   transform: scale(1.03);
   background-position: right center;
-}
-
-#results {
-  max-width: 800px;
-  margin-bottom: 70px;
-  padding: 30px;
-}
-
-li {
-  list-style-type: none;
-  text-align: center;
-  margin-bottom: 2.8rem;
 }
