--- a/Experiments/Wikipedia Trivia Generator/style.css
+++ b/Experiments/Wikipedia Trivia Generator/style.css
@@ -74,6 +74,7 @@ input {
 
 button {
   width: 100%;
+  margin: 0 0 12px;
   padding: 16px 4px 18px;
   background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
   background-size: 200% auto;
