Adding filtering buttons

--- a/Experiments/199 Birds/199-birds/src/styles/header.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/header.sass
@@ -43,6 +43,7 @@
   right: 0
   z-index: 10
   padding: 0.8rem
+  margin-bottom: 3rem
 
 .searchInput
   display: block
@@ -73,6 +74,50 @@
 .barActive .searchBG
   opacity: 1
 
+
+
+nav
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
+  max-width: 1140px
+  margin: 0 auto
+
+  button
+    margin: 8px
+    padding: 1rem 2rem
+    background-color: $green
+    border: none
+    border-radius: 10rem
+    cursor: pointer
+
+  // .btnMeadows
+  //   background-color: white
+  // .btnRivers
+  //   background-color: white
+  // .btnSea
+  //   background-color: white
+  // .btnDesert
+  //   background-color: white
+  // .btnAustralia
+  //   background-color: white
+  // .btnSavanna
+  //   background-color: white
+  // .btnIce
+  //   background-color: white
+  // .btnRainforest
+  //   background-color: white
+  // .btnForest
+  //   background-color: white
+  // .btnFarm
+  //   background-color: white
+  // .btnPets
+  //   background-color: white
+  // .btnBirdsOfPrey
+  //   background-color: white
+  // .btnNight
+  //   background-color: white
+    
 
   
 
