It's working. just need to solve for emptying the searchbar

--- a/Experiments/199 Birds/199-birds/src/styles/header.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/header.sass
@@ -86,37 +86,15 @@ nav
   button
     margin: 8px
     padding: 1rem 2rem
-    background-color: $green
+    background-color: darken($offWhite, 5%)
     border: none
     border-radius: 10rem
     cursor: pointer
+    outline: none
+    transition: 0.2s $zease
 
-  // .btnMeadows
-  //   background-color: white
-  // .btnRivers
-  //   background-color: white
-  // .btnSea
-  //   background-color: white
-  // .btnDesert
-  //   background-color: white
-  // .btnAustralia
-  //   background-color: white
-  // .btnSavanna
-  //   background-color: white
-  // .btnIce
-  //   background-color: white
-  // .btnRainforest
-  //   background-color: white
-  // .btnForest
-  //   background-color: white
-  // .btnFarm
-  //   background-color: white
-  // .btnPets
-  //   background-color: white
-  // .btnBirdsOfPrey
-  //   background-color: white
-  // .btnNight
-  //   background-color: white
+    &:hover, &:focus
+      background-color: darken($offWhite, 30%)
     
 
   
