Trying to decide how to keep selected button a certain color

--- a/Experiments/199 Birds/199-birds/src/styles/header.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/header.sass
@@ -93,9 +93,15 @@ nav
     outline: none
     transition: 0.2s $zease
 
-    &:hover, &:focus
+    &:hover, &:focus,
       background-color: darken($offWhite, 30%)
-    
+  
+  .btnSelected
+    background-color: darken($offWhite, 30%)
+
+
+
+
 
   
 
