Did some major cleanup. Solved some "multiple rerender bugs"

--- a/Experiments/199 Birds/199-birds/src/styles/global.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/global.sass
@@ -46,6 +46,12 @@ body
   background-color: $offWhite
   overflow-x: hidden
 
+.pageWrap
+  display: flex
+  flex-direction: column
+  align-items: center
+  min-height: 100vh
+
 ul
   list-style: none
   margin: 0
@@ -64,11 +70,6 @@ a
 
   &:hover
     border-bottom: 2px solid $primary
-
-fieldset
-  margin: 0
-  padding: 0
-  border: none
 
 
 // **********
