--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -1,11 +1,7 @@
 
-.pageWrap
-  display: flex
-  flex-direction: column
-  min-height: 100vh
-  
 main
   position: relative
+  width: 100%
 
 section
   display: flex
