Added a favorites feature

--- a/Experiments/199 Birds/199-birds/src/styles/global.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/global.sass
@@ -7,6 +7,7 @@ $primary: hsla(216, 97%, 60%, 1)
 $offWhite: hsl(42, 100%, 95%)
 $border: hsla(180, 13%, 30%, .2)
 $green: #c8da81
+$coral: #f25268
 $dark:  hsl(180, 13%, 28%)
 $g1: #1ba4f7
 $g2: #4641ff
@@ -51,6 +52,10 @@ body
   flex-direction: column
   align-items: center
   min-height: 100vh
+
+button
+  padding: 0
+  outline: none
 
 ul
   list-style: none
