--- a/Experiments/199 Birds/199-birds/src/styles/main.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/main.sass
@@ -43,6 +43,30 @@ section
     padding: 1rem
     text-align: center
 
+  .btnFavorite
+    position: absolute
+    top: 1.5rem
+    right: 1.5rem
+    z-index: 2
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 5rem
+    height: 5rem
+    background-color: hsla(0, 0%, 100%, 0.8)
+    border: none
+    border-radius: 5rem
+    box-shadow: 0 3px 18px hsla(352, 100%, 74%, 0.2)
+    color: $coral
+    pointer-events: none
+
+    svg
+      fill: $coral
+      fill-opacity: 1
+
+
+
+
 
 
 .noMatchMessage
