Enlarged the video player

--- a/Experiments/199 Birds/199-birds/src/styles/modal.sass
+++ b/Experiments/199 Birds/199-birds/src/styles/modal.sass
@@ -19,8 +19,9 @@
   .ctrVideo
     position: relative
     z-index: 21
-    width: 800px
-    height: 450px
+    width: 1000px
+    height: 563px
+    margin: 2rem
     background-color: black
     border-radius: 10px
     overflow: hidden
