--- a/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/products.sass
+++ b/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/products.sass
@@ -1,3 +1,6 @@
+/////////////////
+// All products page
+/////////////////
 .productGrid
   display: grid
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr)
