Working on the schema

--- a/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/header.sass
+++ b/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/header.sass
@@ -14,3 +14,12 @@
     height: 8rem
     margin: 0
     padding: 2rem 0
+
+  nav
+
+    a
+      padding: 1.5rem
+
+      &:hover
+        background-color: $glacier
+        border-radius: 5px
