--- a/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/global.sass
+++ b/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/global.sass
@@ -95,13 +95,6 @@ p, span, h4, a, li, input, label, textarea
   font-size: 1.6rem
   line-height: 2.2rem
 
-// Nice for adding space between text sections
-.marbot2
-  margin-bottom: 2rem
-.marbot3
-  margin-bottom: 3rem
-.marbot4
-  margin-bottom: 4rem
 
 
 
@@ -140,9 +133,9 @@ hr
   border-top: 1px solid $steel
 
 ul
-  list-style: none
-  margin: 0
-  padding: 0
+  // list-style: none
+  margin-left: 2.4rem
+  // padding: 0
 
 svg
   fill: $carbon
@@ -164,3 +157,14 @@ img
   margin: 0 auto
   max-width: 1200px
   padding: 0 2rem
+
+// Nice for adding space between text sections
+.marbot2
+  margin-bottom: 2rem
+.marbot3
+  margin-bottom: 3rem
+.marbot4
+  margin-bottom: 4rem
+
+.marTop10
+  margin-top: 10rem
