--- a/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/global.sass
+++ b/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/global.sass
@@ -67,29 +67,33 @@ body
 h1, h2, h3, h4, h5, h6, p, span, a, li, label, input, textarea, button, footer
   margin: 0
   color: $carbon
-  font-family: 'Lato', Helvetica Neue, arial, sans-serif
+  font-family: 'Roboto', Helvetica Neue, arial, sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
 h1, h2, h3, h4, h5, h6
-  font-weight: 900
-
-h1, h2
-  color: $deepSpace
+  font-family: bebas-neue, sans-serif
+  font-weight: normal
 
 h1
-  font-size: 7.2rem
-  line-height: 8.6rem
+  font-size: 8rem
+  line-height: 8rem
 h2
-  font-size: 4.2rem
+  font-size: 6.8rem
+  line-height: 6.8rem
+h3
+  font-size: 5rem
   line-height: 5rem
 h4
-  font-size: 2rem
-  line-height: 2.8rem
+  font-size: 3.8rem
+  line-height: 4.8rem
+h5
+  font-size: 3rem
+  line-height: 4rem
 
-p, span, h4, a, li, input, label, textarea
-  font-size: 2rem
-  line-height: 2.8rem
+p, span, a, li, input, label, textarea
+  font-size: 1.8rem
+  line-height: 2.6rem
 
 .p2
   font-size: 1.6rem
