--- a/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/index.sass
+++ b/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/index.sass
@@ -1,3 +1,5 @@
+@import url("https://use.typekit.net/ixz0jif.css")
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap')
 @import 'global'
 @import 'layout'
 @import 'header'
