--- a/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/products.sass
+++ b/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/products.sass
@@ -45,3 +45,8 @@
     position: absolute
     width: 100%
     bottom: 0
+
+
+@media screen and (max-width: 800px)
+  .ctr__heroProductImage
+    height: 35vw
