--- a/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/global.sass
+++ b/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/global.sass
@@ -72,6 +72,7 @@ h1, h2, h3, h4, h5, h6, p, span, a, li, label, input, textarea, button, footer
   -moz-osx-font-smoothing: grayscale
 
 h1, h2, h3, h4, h5, h6
+  color: $deepSpace
   font-family: bebas-neue, sans-serif
   font-weight: normal
 
