Ready to pipe in product feature data

--- a/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/global.sass
+++ b/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/global.sass
@@ -21,10 +21,11 @@ $white:     #FFFFFF
 
 // Gradients
 $gradientX: linear-gradient(to right, $goldenrod 0%, $saffron 100%)
-$gradientY: linear-gradient(to bottom, $goldenrod 0%, $saffron 100%)
+$gradientY: linear-gradient(to bottom, $saffron 0%, $goldenrod 100%)
 
 // Shadows
 $shadowSoft: 0px 5px 2px -2px hsla(0, 0%, 60%, 0.06), 0px 4px 25px hsla(0, 0%, 60%, 0.14)
+$shadowMed: 0px 16px 30px -14px transparentize($deepSpace, 0.7)
 $shadowBlue: 0px 6px 20px -2px transparentize($goldenrod, 0.3)
 
 // Easing
@@ -91,6 +92,9 @@ h4
 h5
   font-size: 3rem
   line-height: 4rem
+h6
+  font-size: 2.6rem
+  line-height: 2.8rem
 
 p, span, a, button, li, input, label, textarea
   font-size: 1.6rem
