--- a/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/header.sass
+++ b/Experiments/Gatsby-experiments/learn-gatsbyNode/src/styles/header.sass
@@ -33,6 +33,7 @@
     right: 0
     background-color: $white
     border: 1px solid $storm
+    box-shadow: $shadowMed
 
     .typeSelection
       border-bottom: 1px solid $storm
