--- a/Experiments/React/react-sandbox/src/styles/main.sass
+++ b/Experiments/React/react-sandbox/src/styles/main.sass
@@ -1,6 +1,11 @@
 body
   height: 100vh
   margin: 0
+  background-color: #21232b
+  color: #ccc
+
+
+////////////////////////
 
 
 .sectionReactMemo
@@ -8,12 +13,39 @@ body
   display: grid
   place-content: center
 
-
   .box
     width: 300px
-
 
   h2
     font-size: 20px
     margin: 0 0 1rem 0
 
+
+////////////////////////
+
+  
+.sectionComposition
+  display: flex
+  flex-direction: column
+  height: 100vh
+  
+  h1
+    font-size: 3.8rem
+  h2
+    font-size: 2.8rem
+  h3
+    font-size: 1.8rem
+  h4
+    font-size: 1rem
+
+  header
+    padding: 10px 30px
+    background-color: black
+  
+  main
+    flex: 1
+    padding: 10px 30px
+  
+  footer
+    padding: 10px 30px
+    background-color: black
